# emDB

./: .gitignore  Cargo.toml  LICENSE  README.md  rustc-ice-2024-04-25T10_19_36-17998.txt
bench/embedded_db_comparisons/: Cargo.toml  README.md  data_logs.json  data_old.json
bench/embedded_db_comparisons/benches/: data_logs.rs  sales_analytics.rs  string_copy.rs  user_details.rs
bench/embedded_db_comparisons/src/: lib.rs  utils.rs
combi/: Cargo.toml  README.md  build.rs
combi/benches/tokens/: cases.rs  main.rs
combi/src/: core.rs  derived.rs  lib.rs  logical.rs  macros.rs
combi/src/text/: mod.rs
combi/src/tokens/: basic.rs  derived.rs  error.rs  matcher.rs  mod.rs  recovery.rs
crates/: Cargo.toml  README.md  rustc-ice-2024-06-03T12_37_26-29379.txt  rustc-ice-2024-06-03T12_37_30-29440.txt  rustc-ice-2024-06-04T14_08_22-14259.txt  rustc-ice-2024-06-04T14_08_22-14260.txt  rustc-ice-2024-06-04T14_08_22-14261.txt  rustc-ice-2024-06-06T15_49_32-21429.txt  rustc-ice-2024-06-06T15_49_42-21498.txt  rustc-ice-2024-06-06T15_49_50-21535.txt  rustc-ice-2024-06-06T15_49_51-21555.txt  rustc-ice-2024-06-06T15_50_16-21684.txt  rustc-ice-2024-06-06T19_39_28-30933.txt  rustc-ice-2024-06-06T19_39_36-30983.txt  rustc-ice-2024-06-13T16_48_26-16844.txt  rustc-ice-2024-06-13T16_48_39-16906.txt  rustc-ice-2024-06-13T16_48_45-16945.txt  rustc-ice-2024-06-13T16_49_04-17068.txt  rustc-ice-2024-06-13T16_49_14-17123.txt  rustc-ice-2024-06-13T16_49_15-17150.txt  rustc-ice-2024-06-13T16_49_19-17185.txt  rustc-ice-2024-06-13T16_49_27-17231.txt  rustc-ice-2024-06-13T16_49_29-17256.txt  rustc-ice-2024-06-13T16_49_35-17315.txt  rustc-ice-2024-06-13T16_49_39-17348.txt  rustc-ice-2024-06-13T16_49_43-17380.txt  rustc-ice-2024-06-13T16_49_47-17412.txt  rustc-ice-2024-06-13T16_49_48-17438.txt  rustc-ice-2024-06-13T16_49_51-17466.txt  rustc-ice-2024-06-13T16_49_56-17506.txt  rustc-ice-2024-06-13T16_50_02-17539.txt  rustc-ice-2024-06-13T16_50_06-17571.txt  rustc-ice-2024-06-13T16_50_20-17639.txt  rustc-ice-2024-06-13T16_50_20-17663.txt  rustc-ice-2024-06-13T16_50_24-17701.txt  rustc-ice-2024-06-13T16_50_34-17778.txt  rustc-ice-2024-06-13T16_51_01-17921.txt  rustc-ice-2024-06-13T16_51_12-18035.txt  rustc-ice-2024-06-13T16_51_20-18082.txt  rustc-ice-2024-06-13T16_51_26-18132.txt  (+11 more)
crates/.cargo/: config.toml
crates/better_arenas/: Cargo.toml  README.md
crates/better_arenas/src/: drop.rs  ints.rs  lib.rs  unique.rs
crates/combi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  data.json
crates/combi/scripts/: extra.gdb
crates/combi/src/: core.rs  derived.rs  lib.rs  logical.rs  macros.rs
crates/emdb/: Cargo.toml  README.md
crates/emdb/examples/: dereferencing.rs  foreach.rs  groupby.rs  joins.rs  manual_impl.rs  nothing.rs  people.rs  simple_all.rs  small_table.rs  user_details.rs
crates/emdb/src/: lib.rs
crates/emdb/tests/: .gitignore  code.rs  emql.rs  example_people_test.rs  scratch.rs
crates/emdb_core/: Cargo.toml  README.md
crates/emdb_core/src/: lib.rs
crates/enumtrait/: CHANGELOG.md  Cargo.toml  README.md
crates/enumtrait/src/: gen_match.rs  impl_trait.rs  lib.rs  macro_comm.rs  quick_enum.rs  quick_from.rs  store.rs
crates/minister/: Cargo.toml  README.md  data.json  rustc-ice-2024-08-20T21_24_27-173556.txt  rustc-ice-2024-08-20T21_30_19-175764.txt  rustc-ice-2024-08-20T21_30_26-175926.txt  rustc-ice-2024-08-21T16_30_14-488689.txt
crates/minister/benches/: iterators.rs  micros.rs
crates/minister/src/: basic.rs  chunk.rs  iter.rs  lib.rs  parallel.rs
crates/pulpit/: Cargo.toml  README.md  data.json
crates/pulpit/benches/: col_vs_tup.rs  gen_arena.rs  pull_arena.rs  rc_vs_brw.rs
crates/pulpit/examples/: bowling_club.rs
crates/pulpit/src/: ind_brw_pat.rs  lib.rs  traits.rs  value.rs
crates/pulpit/tests/: design.rs  output.rs  people.rs  scratch.rs  simple.rs  transactions.rs
crates/pulpit_gen/: Cargo.toml  README.md
crates/pulpit_gen/src/: access.rs  additions.rs  column.rs  columns.rs  groups.rs  index.rs  lib.rs  limit.rs  namer.rs  ops.rs  predicates.rs  table.rs  uniques.rs
crates/pulpit_gen/tests/: design.rs  scratch.rs
crates/pulpit_macro/: Cargo.toml  README.md
crates/pulpit_macro/src/: lib.rs
crates/quote_debug/: Cargo.toml  README.md
crates/quote_debug/src/: lib.rs
crates/serbit/: Cargo.toml
crates/serbit/src/: ir.rs  lib.rs
crates/volcano/: Cargo.toml  README.md
emdb/: Cargo.toml  README.md
emdb/examples/basic/: nothing.rs  simple_all.rs  small_table.rs
emdb/examples/complex/: dereferencing.rs  foreach.rs  groupby.rs  joins.rs  user_details.rs
emdb/examples/simple/: people.rs
emdb/src/: lib.rs
emdb/src/analysis/: mod.rs
emdb/src/backend/: mod.rs
emdb/src/frontend/: mod.rs
emdb/src/newplan/: mod.rs  operators.rs  queries.rs  tables.rs  types.rs
emdb/src/optimise/: mod.rs
emdb/src/plan/: builder.rs  helpers.rs  mod.rs  operators.rs  queries.rs  repr.rs  repr2.rs  tables.rs  targets.rs  types.rs
emdb/src/utils/: misc.rs  mod.rs
emdb/tests/: compile_tests.rs  debug.rs  macro_tests.rs  scratch.rs  test.rs  test_dot.rs  user_details.rs
emdb/tests/basic/: just_name.rs  simple_all.rs  small_table.rs
emdb/tests/complex/: dereferencing.rs  groupby.rs  mod.rs  user_details.rs
emdb/tests/invalid/: simple_bad_type.stderr  simple_wrong_backend.rs  simple_wrong_backend.stderr
experiments/: Cargo.toml
experiments/benches/: arenas.rs  tables.rs  utils.rs
experiments/scripts/: README.md  graphify.py  requirements.txt  utils.py
experiments/src/tables/: duckdb.rs  foresight.rs  macrodb.rs  mod.rs  naive.rs  sqlite.rs
papers/emdb_thesis/experiments2/: Cargo.toml  rustc-ice-2024-06-07T14_28_32-19880.txt  rustc-ice-2024-06-07T14_28_32-19881.txt  rustc-ice-2024-06-07T14_28_39-19999.txt  rustc-ice-2024-06-07T14_28_39-20000.txt  rustc-ice-2024-06-07T20_15_14-22976.txt  rustc-ice-2024-06-07T20_15_14-22977.txt  rustc-ice-2024-06-07T20_16_11-23339.txt  rustc-ice-2024-06-07T20_16_11-23340.txt  rustc-ice-2024-06-07T20_16_21-23436.txt  rustc-ice-2024-06-07T20_16_21-23437.txt  (+2 more)
projects/ai-assistance/: README.md  pyproject.toml
(+646 files in other folders)
