[package]
name = "combi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0" }
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = { version = "2.0.45", features = ["full", "extra-traits"] }

[features]
tokens = []
