[package]
name = "combi"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
rustc_version = "0.4"

[dependencies]
derive-where = "1.2.7"

proc-macro2 = { version = "1.0", optional = true }
proc-macro-error = { version = "1.0.4", optional = true }
quote = { version = "1.0.33", optional = true }
syn = { version = "2.0.45", features = [
    "full",
    "extra-traits",
], optional = true }
colored = { version = "2.1.0", optional = true }

[features]
# To enable better diagnostics 
nightly = []
tokens = [
    "dep:proc-macro2",
    "dep:proc-macro-error",
    "dep:quote",
    "dep:syn",
    "dep:colored",
]
text = []
