[workspace]
resolver = "2"
members = ["combi", "emdb", "emdb_core", "enumtrait", "pulpit", "pulpit_gen", "pulpit_macro", "quote_debug", "minister"]

[workspace.package]
homepage = "https://github.com/OliverKillane/emDB"
repository = "https://github.com/OliverKillane/emDB"
license-file = "../LICENSE"

