[package]
name = "combi"
version = "0.2.0"
edition = "2021"
build = "build.rs"

readme = "README.md"
description = "A combinators library with an included rust token parsing implementation"
keywords = ["parser", "combinator", "parsing"]
categories = ["parser-implementations", "parsing", "compilers"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[build-dependencies]
rustc_version = "0.4"

[dependencies]
derive-where = "1.2.7"
proc-macro2 = { version = "1.0"}
proc-macro-error2 = "2.0.1"
quote = { version = "1.0.39"}
syn = { version = "2.0.99", features = [
    "full",
    "extra-traits",
]}

[dev-dependencies]
divan = { git = "https://github.com/OliverKillane/divan.git", branch = "enh/file-output" }
chumsky-proc = { git = "https://github.com/OliverKillane/chumsky-proc.git", branch = "mitigation/avoiding-cargo-examples-bug" }
chumsky = "0.9.3"

[features]
# To enable better diagnostics 
nightly = []

[[bench]]
name = "tokens"
harness = false
