[package]
name = "emdb"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "A fast embedded database"
keywords = ["embedded-database"]
categories = ["compilers", "database"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[dependencies]
emdb_core = { path = "../emdb_core" }

[dev-dependencies]
trybuild = "1.0.91"
glob = "0.3.1"
