[package]
name = "emdb"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "A fast embedded database"
keywords = ["embedded-database"]
categories = ["compilers", "database"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[dependencies]
emdb_core = { version = "^1.0", path = "../emdb_core" }
pulpit = { version = "^1.0", path = "../pulpit" }
minister = { version = "^1.0", path = "../minister" }

[dev-dependencies]
trybuild = "1.0.103"
glob = "0.3.2"
