[package]
name = "emdb_core"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "The macros used for generating emdb embedded databases"
keywords = ["embedded-database"]
categories = ["compilers", "database"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2"
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
typed-arena = "2.0.2"
typed-generational-arena = "0.2"
proc-macro2 = { version = "1.0" }
proc-macro-error = "1.0.4"
quote = "1.0.33"
rand = "0.9"
combi = { path = "../combi" }
enumtrait = { path = "../enumtrait" }
dot = "0.1.4"
itertools = "0.13.0"
pulpit = { path = "../pulpit" }
quote_debug = { path = "../quote_debug" }
