[package]
name = "emdb_core"
version = "1.0.0"
edition = "2021"

readme = "README.md"
description = "The macros used for generating emdb embedded databases"
keywords = ["embedded-database"]
categories = ["compilers", "database"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2"
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
typed-arena = "2.0.2"
typed-generational-arena = "0.2"
proc-macro2 = { version = "1.0" }
proc-macro-error2 = "2.0.1"
quote = "1.0.38"
rand = "0.9"
dot = "0.1.4"
itertools = "0.14.0"
combi = { version="^1.0", path = "../combi" }
enumtrait = { version="^1.0", path = "../enumtrait" }
pulpit = { version="^1.0", path = "../pulpit" }
quote_debug = { version="^1.0", path = "../quote_debug" }
