[package]
name = "enumtrait"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "A library of macros for polymorphism using enums"
keywords = ["performance", "traits"]
categories = ["rust-patterns"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error2 = "2.0.1"
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
quote = "1.0.38"
combi = { path = "../combi" }

[dev-dependencies]
divan = { git = "https://github.com/OliverKillane/divan.git", branch = "enh/file-output" }
trybuild = "1.0.103"
glob = "0.3.2"

[[bench]]
name = "call_cost"
harness = false

# TODO: Add optimised profile for benchmarks (need to avoid inlining)