[package]
name = "volcano"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "A crate for operator abstractions"
keywords = ["performance", "traits"]
categories = ["data"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[dependencies]
pulpit = { path = "../pulpit" }
rayon = "1.10.0"

[dev-dependencies]
