[package]
name = "quote_debug"
version = "1.0.0"
edition = "2021"

readme = "README.md"
description = "A crate for wrapping checks on generated tokenstreams"
keywords = ["macros"]
categories = ["macros"]

repository.workspace = true
homepage.workspace = true
license-file.workspace = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
