[project]
name = "tuning-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.1",
    "faiss-gpu>=1.7.2",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
]
