[package]
name = "experiments2"
version = "0.1.0"
edition = "2021"

readme = "README.md"
description = "A collection of experiments to support the thesis"
keywords = ["experiment"]
categories = ["experiment"]

[dependencies]
duckdb = { version = "0.10.2", features = ["bundled"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
emdb = { path = "../../../crates/emdb" }

[dev-dependencies]
divan = { git = "https://github.com/OliverKillane/divan.git", branch = "enh/file-output" }
rand = "0.8"

[[bench]]
name = "userdetails"
harness = false
